# ColourSpaceConversion

./: CMakeLists.txt  colour_space_conversion.c  colour_space_conversion_integers.c  colour_space_conversion_integers_hardware.c  colour_space_conversion_updated.c  colour_space_conversion_usat.c  image_to_rgb.m  rgb_to_image.m  run_on_all_input.py  write_png.c
data/: README.md
data/RGB/: 2by6.txt  7wonders.txt  earth.txt  forest.txt  life_is_strange.txt
data/RGBZigzag/: 7wonders.txt  car.txt  xwing.txt
timing_output/: float_timing_results.txt  integer_timing_results.txt  integer_usat_timing_results.txt
